kubernetes/apps/blanca-web/shlink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink
  namespace: blanca-dental-care
spec:
  selector:
    app: shlink
  ports:
    - port: 8080
      targetPort: 8080
