kubernetes/apps/blanca-web/shlink/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shlink
  namespace: blanca-dental-care
spec:
  podSelector:
    matchLabels:
      app: shlink
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8080
